--- a/app/templates/app/_index.html
+++ b/app/templates/app/_index.html
@@ -3,16 +3,16 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
-    <title><%= _.slugify(appname) %></title>
-    <link href="lib.css" rel="stylesheet">
-    <link href="main.css" rel="stylesheet">
+    <title><%= appName %></title>
+    <link href="styles/lib.css" rel="stylesheet">
+    <link href="styles/main.css" rel="stylesheet">
   </head>
   <body>
-    <div ng-app="<%= _.slugify(appname) %>">
+    <div ng-app="<%= appName %>">
       <div class="container" ng-view="ng-view"></div>
     </div>
-    <script src="lib.js"></script>
-    <script src="templates.js"></script>
-    <script src="main.js"></script>
+    <script src="scripts/lib.js"></script>
+    <script src="scripts/templates.js"></script>
+    <script src="scripts/main.js"></script>
   </body>
 </html>
