--- a/app/templates/app/_index.html
+++ b/app/templates/app/_index.html
@@ -8,7 +8,7 @@
     <link href="styles/main.css" rel="stylesheet">
   </head>
   <body>
-    <div id="sl" ng-app="<%= appName %>" ng-hint>
+    <div id="sl" ng-app="<%= appName %>">
       <div id="sl-body">
         <div class="container" ng-view="ng-view"></div>
       </div>
